...
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:paddingRight="32dp"
...
