...
    <string name="confirm_label">Confirm</string>
    <string name="err_zero_detected">Both fields must have a time!</string>
    <string name="debug_jump">You\'ve jumped to the break period with:</string>

    <!-- Work Period strings -->
    <string name="pause_button">PAUSE</string>
    <string name="unpause_button">UNPAUSE</string>
    <string name="end_button">END</string>
    <string name="finish_item">Finish</string>
    <string name="delete_item">Delete</string>

    <!-- Break Period strings -->
    <string name="level_init_text">Level: 1</string>
...
